--- a/playbook.yml
+++ b/playbook.yml
@@ -4,6 +4,6 @@
   pre_tasks:
     - name: debug private var
       debug:
-        var: priv_ssh_key
+        var: pubkey
   #roles:
   #  - ansible-role-nginx
